--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,83 @@
-dash #==2.12.2
-dash-bootstrap-components #==1.4.1
+annotated-types==0.7.0
+blinker==1.9.0
+blis==1.0.1
+catalogue==2.0.10
+certifi==2024.8.30
+charset-normalizer==3.4.0
+click==8.1.7
+cloudpathlib==0.20.0
+confection==0.1.5
+curated-tokenizers==0.0.9
+curated-transformers==0.1.1
+cymem==2.0.8
+dash==2.18.2
+dash-bootstrap-components==1.6.0
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
+en_core_web_trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl#sha256=272a31e9d8530d1e075351d30a462d7e80e31da23574f1b274e200f3fff35bf5
+filelock==3.16.1
+Flask==3.0.3
+fsspec==2024.10.0
+idna==3.10
+importlib_metadata==8.5.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+langcodes==3.4.1
+language_data==1.2.0
+marisa-trie==1.2.1
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+mpmath==1.3.0
+murmurhash==1.0.10
+nest-asyncio==1.6.0
+networkx==3.4.2
+numpy==2.0.2
+nvidia-cublas-cu12==12.4.5.8
+nvidia-cuda-cupti-cu12==12.4.127
+nvidia-cuda-nvrtc-cu12==12.4.127
+nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cudnn-cu12==9.1.0.70
+nvidia-cufft-cu12==11.2.1.3
+nvidia-curand-cu12==10.3.5.147
+nvidia-cusolver-cu12==11.6.1.9
+nvidia-cusparse-cu12==12.3.1.170
+nvidia-nccl-cu12==2.21.5
+nvidia-nvjitlink-cu12==12.4.127
+nvidia-nvtx-cu12==12.4.127
+packaging==24.2
+plotly==5.24.1
+preshed==3.0.9
+psycopg2-binary==2.9.10
+pydantic==2.9.2
+pydantic_core==2.23.4
+Pygments==2.18.0
+python-dotenv==1.0.1
+regex==2024.11.6
+requests==2.32.3
+retrying==1.3.4
+rich==13.9.4
+setuptools==75.5.0
+shellingham==1.5.4
+six==1.16.0
+smart-open==7.0.5
+spacy==3.8.2
+spacy-curated-transformers==0.3.0
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+srsly==2.4.8
+sympy==1.13.1
+tenacity==9.0.0
+thinc==8.3.2
+torch==2.5.1
+tqdm==4.67.0
+triton==3.1.0
+typer==0.13.0
+typing_extensions==4.12.2
+urllib3==2.2.3
+wasabi==1.1.3
+weasel==0.4.1
+Werkzeug==3.0.6
+wrapt==1.16.0
+zipp==3.21.0
