--- a/requirements.txt
+++ b/requirements.txt
@@ -22,10 +22,12 @@ dash_dangerously_set_inner_html==0.0.2
 dash_mantine_components==0.14.7
 distro==1.9.0
 en_core_web_trf @ https://github.com/explosion/spacy-models/releases/download/en_core_web_trf-3.8.0/en_core_web_trf-3.8.0-py3-none-any.whl#sha256=272a31e9d8530d1e075351d30a462d7e80e31da23574f1b274e200f3fff35bf5
+faiss-cpu==1.9.0.post1
 filelock==3.16.1
 Flask==3.0.3
 fonttools==4.55.0
 fsspec==2024.10.0
+groq==0.12.0
 h11==0.14.0
 httpcore==1.0.7
 httpx==0.27.2
@@ -50,18 +52,18 @@ murmurhash==1.0.10
 nest-asyncio==1.6.0
 networkx==3.4.2
 numpy==2.0.2
-nvidia-cublas-cu12==12.4.5.8
-nvidia-cuda-cupti-cu12==12.4.127
-nvidia-cuda-nvrtc-cu12==12.4.127
-nvidia-cuda-runtime-cu12==12.4.127
+nvidia-cublas-cu12==12.1.3.1
+nvidia-cuda-cupti-cu12==12.1.105
+nvidia-cuda-nvrtc-cu12==12.1.105
+nvidia-cuda-runtime-cu12==12.1.105
 nvidia-cudnn-cu12==9.1.0.70
-nvidia-cufft-cu12==11.2.1.3
-nvidia-curand-cu12==10.3.5.147
-nvidia-cusolver-cu12==11.6.1.9
-nvidia-cusparse-cu12==12.3.1.170
+nvidia-cufft-cu12==11.0.2.54
+nvidia-curand-cu12==10.3.2.106
+nvidia-cusolver-cu12==11.4.5.107
+nvidia-cusparse-cu12==12.1.0.106
 nvidia-nccl-cu12==2.21.5
 nvidia-nvjitlink-cu12==12.4.127
-nvidia-nvtx-cu12==12.4.127
+nvidia-nvtx-cu12==12.1.105
 openai==1.54.4
 packaging==24.2
 panadas==0.2
@@ -103,7 +105,9 @@ tenacity==9.0.0
 thinc==8.3.2
 threadpoolctl==3.5.0
 tokenizers==0.20.3
-torch==2.5.1
+torch==2.5.1+cu121
+torchaudio==2.5.1+cu121
+torchvision==0.20.1+cu121
 tqdm==4.67.0
 transformers==4.46.3
 triton==3.1.0
